--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
 --snitap-sun: #ffcd1e;
 --snitap-sky-mid: #06b6d4;
 --snitap-sky-light: #67e8f9;
---snitap-joy-md: #db2777;
+--snitap-joy-mid: #db2777;
 --snitap-joy-light: #f472b6;
 --snitap-leaf-mid: #16a34a;
 
