adding hero buttons

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -32,6 +32,45 @@ h1 span:nth-child(3) {
     animation: slideUp 6s infinite ease;
 }
 
+/* buttons */ 
+
+& .buttons {
+    display: flex;
+    gap: 2rem;
+    margin-top: 3rem;
+
+    & .button {
+
+        transition: scale 350ms;
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
+        border-radius: 5rem;
+
+        &.buy {
+padding: 1.5rem 3rem;
+background-color: var(--snitap-sun);
+        }
+
+        &.play span {
+            padding: 1.5rem;
+            border-radius: 50%;
+            background-color: white;
+            display: flex;
+        }
+
+&:hover {
+    scale: 1.1;
+}
+
+    }
+
+    & .shadow {
+        box-shadow: 0 2px 5px rgb(0 0 0 / .1), 0 9px 9px rgb(0 0 0 / .09), 0 20px 12px rgb(0 0 0 / .05), 0 36px 15px rgb(0 0 0/ .01);
+    }
+}
+
+
 }
 
 @keyframes slideUp {
