adding animation hero image

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -3,7 +3,10 @@
     width: 100%;
     padding: 2.5rem 2rem;
     margin-inline: auto;
-
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+overflow: hidden;
 & h1 {
 max-width: 40rem;
 }
@@ -29,7 +32,7 @@ h1 span:nth-child(3) {
 
 & h1 span {
     display: block;
-    animation: slideUp 6s infinite ease;
+    animation: slideUp 5s 2s infinite ease;
 }
 
 /* buttons */ 
@@ -70,7 +73,77 @@ background-color: var(--snitap-sun);
     }
 }
 
+/* patins */
+& > div:nth-child(2) {
+display: block;
+width: 100%;
+max-width: 30.5rem;
+height: 30.5rem;
 
+& .content {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+& img {
+    position: absolute;
+    width: 100%;
+}
+
+& img[src*="ellipse"] {
+    width: 94%;
+    top: 3%;
+    left: 3%;
+
+    transform: translateX(200%);
+    animation: slideIn 3s 200ms ease forwards;
+}
+
+& img[src*="patins"] {
+    z-index: 1;
+
+    transform: translateX(200%);
+animation: slideIn 3s ease forwards;
+}
+
+& img[src*="stars-1"] {
+    max-width: 5.5rem;
+    top: 30%;
+z-index: 0;
+
+opacity: 0;
+transform: translateX(400%);
+animation: slideIn 2s 800ms ease both, appear 100ms 800ms both;
+}
+
+& img[src*="stars-2"] {
+    max-width: 2.5rem;
+    right: 0;
+    bottom: 35%;
+
+    transform: translateX(400%);
+    animation: slideIn 2.2s 800ms ease forwards;
+}
+
+}
+
+}
+
+@keyframes slideIn {
+   50% {
+    transform: translateX(-20px);
+   }
+   
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes appear {
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes slideUp {
