--- a/styles/hero.css
+++ b/styles/hero.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: space-between;
 overflow: hidden;
+
 & h1 {
 max-width: 40rem;
 }
@@ -69,7 +70,10 @@ background-color: var(--snitap-sun);
     }
 
     & .shadow {
-        box-shadow: 0 2px 5px rgb(0 0 0 / .1), 0 9px 9px rgb(0 0 0 / .09), 0 20px 12px rgb(0 0 0 / .05), 0 36px 15px rgb(0 0 0/ .01);
+        box-shadow: 0 2px 5px rgb(0 0 0 / .1), 
+        0 9px 9px rgb(0 0 0 / .09), 
+        0 20px 12px rgb(0 0 0 / .05), 
+        0 36px 6.75px rgb(0 0 0/ .01);
     }
 }
 
@@ -222,4 +226,129 @@ animation: slideIn 2s 800ms ease both, appear 100ms 800ms both;
     100% {
         transform: translateY(-15rem);
     }
+}
+
+@media (width < 1024px) {
+    #hero {
+        max-width: 375px;
+        flex-direction: column-reverse;
+        padding: 1rem 2.5rem;
+
+& h1 {
+    max-width: 19.5rem;
+
+& div {
+    height: 2.5rem;
+}
+
+}
+
+& .buttons {
+    flex-direction: column-reverse;
+    margin-bottom: 3rem;
+    gap: 1.5rem;
+} 
+
+& > div:nth-child(2) {
+    max-width: 19.5rem;
+    height: 19.5rem;
+
+    & img[src*="ellipse"] {
+        width: 98%;
+    }
+
+    & img[src*="stars-1"] {
+        max-width: 3.5rem;
+    }
+
+    & img[src*="stars-2"] {
+        max-width: 1.75rem;
+        right: -.75rem; 
+    }
+
+}
+
+
+}
+
+@keyframes slideUp {
+    0%, 22% {
+        transform: translateY(0);
+    }
+    
+    
+    
+    23% {
+        transform: translateY(calc(-2.5rem - 15px));
+    }
+    
+    25% {
+        transform: translateY(calc(-2.5rem + 10px));
+    }
+    
+    27% {
+        transform: translateY(calc(-2.5rem - 5px));
+    }
+    
+    29% {
+        transform: translateY(calc(-2.5rem + 5px));
+    }
+    
+    
+    
+    33%, 55% {
+        transform: translateY(-2.5rem);
+    }
+
+    
+
+    56% {
+        transform: translateY(calc(-5rem - 15px));
+    }
+    
+    58% {
+        transform: translateY(calc(-5rem + 10px));
+    }
+    
+    60% {
+        transform: translateY(calc(-5rem - 5px));
+    }
+    
+    62% {
+        transform: translateY(calc(-5rem + 5px));
+    }
+
+   
+
+    66%, 88% {
+        transform: translateY(-5rem);
+    }
+
+
+
+89% {
+    transform: translateY(calc(-7.5rem - 15px));
+}
+
+91% {
+    transform: translateY(calc(-7.5rem + 10px));
+}
+
+93% {
+    transform: translateY(calc(-7.5rem - 5px));
+}
+
+95% {
+    transform: translateY(calc(-7.5rem + 5px));
+}
+
+
+
+100% {
+    transform: translateY(-7.5rem);
+}
+
+
+}
+
 }
